apps/flux/app/webhook-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webhook
  namespace: flux-system
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`fluxhook.trivernis.dev`)
    kind: Rule
    services:
    - name: webhook-receiver
      port: 80
